# RapidRoute

./: README.md  index.html  package.json  pnpm-lock.yaml
scripts/: generate-icons.js
src/: App.vue  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: index.ts
src/api/config/: apiConfig.ts
src/api/services/: departureBoardService.ts  routeService.ts  stationService.ts
src/api/types/: departureBoard.ts  route.ts  station.ts
src/api/utils/: apiUtils.ts
src/components/: FavoriteStation.vue  SplitFlapDisplay.vue  StationAutocomplete.vue  TransitInfo.vue
